--- a/css/certificates-style.css
+++ b/css/certificates-style.css
@@ -142,7 +142,7 @@
 /*BACK TO TOP BUTTON*/
 
 main {
-    background: url('https://thumbs.gfycat.com/SecondaryActualFishingcat-size_restricted.gif');
+    background: url('https://cdn.wallpapersafari.com/76/28/HqzPwk.gif');
     background-size: cover;
 }
 
