--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,7 @@ nav {
     width: 100%;
     min-height: 100vh;
     background-color: #595A85;
-    background: url('../images/cover.jpg') center no-repeat fixed;
+    background: url('../images/cover.webp') center no-repeat fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -771,7 +771,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://cutewallpaper.org/21/wallpaper-office/6793522-free-office-wallpaper-Profitable-Tradie.jpg') center no-repeat;
+    background: url('../images/portfolio.webp') center no-repeat;
     background-size: cover;
     opacity: .1;
 }
@@ -1039,7 +1039,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://wallpaperaccess.com/full/233083.jpg') center no-repeat;
+    background: url('../images/contact.webp') center no-repeat;
     background-size: cover;
     opacity: .1;
 }
