--- a/css/styles.css
+++ b/css/styles.css
@@ -177,16 +177,22 @@ img {
 /*BACK TO TOP BUTTON*/
 
 #back-to-top-btn {
-    display: inline-block;
     position: fixed;
-    width: 64px;
     height: 64px;
-    bottom: 10px;
-    left: 10px;
+    bottom: 0;
+    left: 0;
     line-height: 50px;
     display: none;
     cursor: url(https://cur.cursors-4u.net/cursors/cur-3/cur222.ani), url(http://cur.cursors-4u.net/cursors/cur-3/cur222.png), auto !important;
+    border-bottom: 10px solid rgb(218, 84, 22);
     z-index: 10000;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
+
+#back-to-top-btn img {
+    width: 64px;
 }
 
 .btnEntrance {
@@ -1577,6 +1583,13 @@ footer .ctn .footer__links ul li a:hover {
 /********************** Extra small devices only *********************/
 
 @media (max-width: 767px) {
+    #back-to-top-btn {
+        height: 13vw;
+        border-bottom: 1vh solid rgb(218, 84, 22);
+    }
+    #back-to-top-btn img {
+        width: 13vw;
+    }
     /* HEADER */
     #scrollPath,
     #progressbar {
@@ -1613,13 +1626,6 @@ footer .ctn .footer__links ul li a:hover {
     .nav-link:hover {
         color: rgb(255, 115, 0);
         text-decoration: none;
-    }
-    #back-to-top-btn {
-        width: 50px;
-        height: 50px;
-        left: inherit;
-        bottom: 15px;
-        right: 15px;
     }
     /* HEADER */
     /* HOME */
