--- a/css/certificates-style.css
+++ b/css/certificates-style.css
@@ -1,3 +1,11 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+
 /*LOADING IMG*/
 
 #loading {
@@ -51,17 +59,34 @@
     top: 0;
     right: 0;
     width: 8px;
+    background: -webkit-gradient(linear, left bottom, left top, from(#008aff), to(#00ffe7));
+    background: -o-linear-gradient(bottom, #008aff, #00ffe7);
     background: linear-gradient(to top, #008aff, #00ffe7);
+    -webkit-animation: animateBar 5s linear infinite;
     animation: animateBar 5s linear infinite;
     z-index: 500000;
+}
+
+@-webkit-keyframes animateBar {
+    0%,
+    100% {
+        -webkit-filter: hue-rotate(0deg);
+        filter: hue-rotate(0deg);
+    }
+    50% {
+        -webkit-filter: hue-rotate(360deg);
+        filter: hue-rotate(360deg);
+    }
 }
 
 @keyframes animateBar {
     0%,
     100% {
+        -webkit-filter: hue-rotate(0deg);
         filter: hue-rotate(0deg);
     }
     50% {
+        -webkit-filter: hue-rotate(360deg);
         filter: hue-rotate(360deg);
     }
 }
@@ -72,7 +97,10 @@
     top: 0;
     left: 0;
     width: 100%;
+    background: -webkit-gradient(linear, left bottom, left top, from(#008aff), to(#00ffe7));
+    background: -o-linear-gradient(bottom, #008aff, #00ffe7);
     background: linear-gradient(to top, #008aff, #00ffe7);
+    -webkit-filter: blur(10px);
     filter: blur(10px);
 }
 
@@ -83,7 +111,10 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background: -webkit-gradient(linear, left bottom, left top, from(#008aff), to(#00ffe7));
+    background: -o-linear-gradient(bottom, #008aff, #00ffe7);
     background: linear-gradient(to top, #008aff, #00ffe7);
+    -webkit-filter: blur(30px);
     filter: blur(30px);
 }
 
@@ -107,14 +138,29 @@
 }
 
 .btnEntrance {
+    -webkit-animation-duration: 0.5s;
     animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+    -webkit-animation-name: btnEntrance;
     animation-name: btnEntrance;
+}
+
+@-webkit-keyframes btnEntrance {
+    from {
+        opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes btnEntrance {
     from {
         opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
         transform: scale3d(0.3, 0.3, 0.3);
     }
     to {
@@ -123,9 +169,23 @@
 }
 
 .btnExit {
+    -webkit-animation-duration: 0.5s;
     animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+    -webkit-animation-name: btnExit;
     animation-name: btnExit;
+}
+
+@-webkit-keyframes btnExit {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
 }
 
 @keyframes btnExit {
@@ -134,6 +194,7 @@
     }
     to {
         opacity: 0;
+        -webkit-transform: scale3d(0.3, 0.3, 0.3);
         transform: scale3d(0.3, 0.3, 0.3);
     }
 }
@@ -170,9 +231,16 @@ body {
 #certificates {
     margin-top: 30px;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
     z-index: 0;
     padding-bottom: 20px;
@@ -184,23 +252,34 @@ body {
     width: 27vw;
     margin-bottom: 40px;
     border: 8px solid rgb(143, 65, 19);
+    -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
     cursor: pointer;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
 }
 
 #certificates img:hover {
+    -webkit-box-shadow: 0 10px 20px rgba(255, 81, 0, 0.7);
     box-shadow: 0 10px 20px rgba(255, 81, 0, 0.7);
+    -webkit-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
     transform: translateY(-20px);
 }
 
 .img-full-screen {
     position: absolute;
+    -ms-flex-item-align: center;
     align-self: center;
     min-height: 100vh;
     min-width: 100vw;
     background: rgba(0, 0, 0, 0.5);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     position: fixed;
     top: 0;
@@ -209,14 +288,20 @@ body {
 
 .img-full-screen .img-full-screen__link {
     width: 60%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
 }
 
 .img-full-screen .img-full-screen__link img {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
     width: 100%;
     border: 8px solid rgb(143, 65, 19);
+    -webkit-box-shadow: 2px 2px rgba(27, 27, 27, 0.5);
     box-shadow: 2px 2px rgba(27, 27, 27, 0.5);
 }
 
@@ -226,6 +311,8 @@ body {
     position: absolute;
     top: 10px;
     right: 10px;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
 }
 
