--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -46,7 +46,6 @@ button {
     top: 0;
     left: 0;
     position: fixed;
-    display: block;
     background-color: rgb(0, 0, 0);
     z-index: 10000000;
     text-align: center;
@@ -61,6 +60,23 @@ button {
     width: 100%;
     height: 100%;
     z-index: 100;
+}
+
+.page-loading *,
+.page-loading *:before,
+.page-loading *:after {
+    animation-play-state: paused !important;
+}
+
+.fade-out {
+    animation: fade-out 1s ease-out forwards;
+}
+
+@keyframes fade-out {
+    100% {
+        opacity: 0;
+        z-index: -100;
+    }
 }
 
 a {
