--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -49,14 +49,14 @@ button {
     background-color: rgb(0, 0, 0);
     z-index: 10000000;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #loading-image {
     -o-object-fit: contain;
     object-fit: contain;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     z-index: 100;
