--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -85,6 +85,62 @@
     transform: none;
 }
 
+
+/* =================== MUSIC PLAYER =================== */
+
+#home .ctn .music-player {
+    position: relative;
+    width: 50%;
+    z-index: 10;
+    opacity: 0;
+    animation: fade-in 2s 3s ease-out forwards;
+}
+
+#home .ctn .music-player #canvas {
+    width: 100%;
+    height: 80%;
+}
+
+#home .ctn .music-player .music-name {
+    width: 100%;
+    text-align: center;
+    font-size: 1.2em;
+    margin: 5px 0 5px 0;
+}
+
+#home .ctn .music-player .btn-group {
+    margin: 0 0 0 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#home .ctn .music-player .btn-group button {
+    width: calc(100% / 3.5);
+    height: 20px;
+    background: none;
+    outline: none;
+    border: none;
+    text-align: center;
+    font-size: 2rem;
+    color: #000;
+}
+
+#home .ctn .music-player .btn-group button span {
+    transition: 0.25s;
+}
+
+#home .ctn .music-player .btn-group button:hover span {
+    color: rgb(255, 81, 0);
+}
+
+#home .ctn .music-player .btn-group button:active span {
+    transform: scale(1.5);
+}
+
+
+/* =================== MUSIC PLAYER =================== */
+
 @keyframes no-transform {
     100% {
         transform: none;
