--- a/stylesheets/mediaQueries.css
+++ b/stylesheets/mediaQueries.css
@@ -202,7 +202,6 @@
         display: none;
     }
     #loading img {
-        content: url('https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif');
         -o-object-fit: cover;
         object-fit: cover;
     }
@@ -255,6 +254,26 @@
         padding: 10px 20px;
         font-size: 2vw;
         letter-spacing: 1.5px;
+    }
+    #home .ctn .music-player .music-name {
+        font-size: 1em;
+    }
+    #home .ctn .music-player .btn-group {
+        position: relative;
+        margin: 0 0 0 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+    #home .ctn .music-player .btn-group button {
+        width: calc(100% / 4);
+        height: 100%;
+        background: none;
+        outline: none;
+        border: none;
+        text-align: center;
+        font-size: 1rem;
     }
     /* HOME */
     /* ABOUT ME */
