--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -63,6 +63,11 @@
     box-shadow: 0 10px 20px rgba(255, 81, 0, 0.8);
 }
 
+#loop-studios-card {
+    background: url('../images/loop-studio-bg.jpg') center no-repeat;
+    background-size: cover;
+}
+
 #room-homepage-card {
     background: url('../images/room-homepage-bg.PNG') center no-repeat;
     background-size: cover;
@@ -250,6 +255,24 @@
     color: #fff;
     margin-bottom: 10px;
     font-size: 1em;
+    text-decoration: none;
+    position: relative;
+}
+
+.project-card .project-card__info a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: .1em;
+    background-color: #fff;
+    transform: scaleX(0);
+    transition: all .25s ease-in-out;
+}
+
+.project-card .project-card__info a:hover::after {
+    transform: scaleX(1);
 }
 
 .project-card .project-card__info div {
