--- a/PROJECTS/LOOPSTUDIOS-PAGE/stylesheets/styles.css
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/stylesheets/styles.css
@@ -211,6 +211,7 @@ section:nth-child(2) {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 6em;
+    margin-bottom: 6em;
 }
 
 .card {
@@ -272,7 +273,7 @@ section:nth-child(2) {
 footer {
     width: 100%;
     background: #000;
-    padding: 2em 10em;
+    padding: 3em 10em;
     height: 20vh;
 }
 
@@ -379,6 +380,10 @@ footer h5 {
         transform: none;
         box-shadow: 0 0 1000px 1000px rgba(95, 95, 95, 0.7);
     }
+    main.blur,
+    footer.blur {
+        filter: blur(3px);
+    }
     header .nav-bar {
         width: 30em;
         height: 100vh;
@@ -484,6 +489,7 @@ footer h5 {
         flex-wrap: wrap;
         justify-content: space-between;
         margin-top: 4em;
+        margin-bottom: 4em;
     }
     .card {
         width: 100%;
@@ -522,7 +528,6 @@ footer h5 {
     footer {
         width: 100%;
         background: #000;
-        padding: 2em 10em;
         height: 40em;
     }
     footer .container {
