--- a/PROJECTS/LOOPSTUDIOS-PAGE/stylesheets/section1.css
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/stylesheets/section1.css
@@ -1,8 +1,9 @@
 section:nth-child(1) {
     height: 100vh;
     width: 100%;
-    background: url('../images/desktop/image-hero.jpg') center no-repeat;
+    background: url('https://media1.tenor.com/images/41d8937cb1ff1d5947b3f01cb64641e5/tenor.gif?itemid=15164944') center no-repeat;
     background-size: cover;
+    position: relative;
 }
 
 .section {
@@ -15,8 +16,89 @@ section:nth-child(1) {
     width: 40em;
     height: auto;
     padding: 1.5em;
+    position: relative;
+}
+
+.span-border {
     position: absolute;
-    border: 3px solid white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: .1em;
+    background-color: #fff;
+    box-shadow: .1em .1em 4em 1em #fff;
+    transform-origin: left;
+    transform: scale(0);
+    animation: run-loop-1 4s ease-out infinite;
+}
+
+@keyframes run-loop-1 {
+    0% {
+        transform: scaleX(0);
+    }
+    25%,
+    100% {
+        transform: scaleX(1);
+    }
+}
+
+@keyframes run-loop-2 {
+    25% {
+        transform: scaleY(0);
+    }
+    50%,
+    100% {
+        transform: scaleY(1);
+    }
+}
+
+@keyframes run-loop-3 {
+    0% {
+        transform: scaleX(0);
+    }
+    25%,
+    100% {
+        transform: scaleX(1);
+    }
+}
+
+@keyframes run-loop-4 {
+    25% {
+        transform: scaleY(0);
+    }
+    50%,
+    100% {
+        transform: scaleY(1);
+    }
+}
+
+.span-border:nth-child(2) {
+    left: initial;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: .1em;
+    transform-origin: top;
+    animation: run-loop-2 4s ease-out infinite;
+}
+
+.span-border:nth-child(3) {
+    top: initial;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: .1em;
+    transform-origin: right;
+    animation: run-loop-3 4s ease-out infinite;
+}
+
+.span-border:nth-child(4) {
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: .1em;
+    transform-origin: bottom;
+    animation: run-loop-4 4s ease-out infinite;
 }
 
 .hero-title {
