documentation page added

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -24,7 +24,7 @@ html {
 
 .dark-mode {
     -webkit-filter: invert(1) hue-rotate(180deg);
-    filter: invert(1) hue-rotate(180deg)
+    filter: invert(1) hue-rotate(180deg);
 }
 
 body {
