--- a/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
@@ -1,11 +1,18 @@
     section.contribution {
-        background: url('../images/background2.png') center no-repeat;
+        background: url('../images/background4.jpg') center no-repeat;
         background-size: cover;
     }
     
-    .document-subject {
-        margin-left: 8em;
-        margin-bottom: 4em;
+    .container.contribution {
+        overflow-x: hidden;
+    }
+    
+    .contribution-content {
+        display: flex;
+        flex-direction: row;
+        padding: 2em 8em;
+        justify-content: space-between;
+        align-items: center;
     }
     
     .contribution-title {
@@ -15,16 +22,16 @@
         border-left: .5rem solid rgb(191, 36, 252);
         display: inline-block;
         padding: .5rem 2rem;
-        padding-right: 3em;
+    }
+    
+    .document-subject.contribution {
+        width: 60%;
     }
     
     .contribution-area {
-        margin-left: 8em;
-        width: 60em;
-        height: 12em;
-        background: #000;
+        width: 40%;
+        height: 20em;
         border-left: .5rem solid rgb(191, 36, 252);
-        clip-path: polygon(0% 0%, 90% 0, 100% 50%, 90% 100%, 0% 100%);
         padding: 0rem 2rem;
         padding-right: 5em;
         display: flex;
@@ -34,6 +41,7 @@
     }
     
     .contribution-text {
+        text-align: justify;
         color: #fff;
         font-size: 1.5em;
     }
@@ -78,7 +86,7 @@
     }
     
     .contribution-btn:hover {
-        box-shadow: 0 0 .5em .2em rgb(102, 101, 101);
+        box-shadow: 0 0 .5em .2em rgb(110, 110, 110);
     }
     
     .contribution-btn:nth-child(1) {
@@ -91,18 +99,47 @@
         color: #fff;
     }
     
+    @media (max-width:992px) {
+        section.contribution {
+            background: url('../images/background4.jpg') right no-repeat;
+            background-size: cover;
+        }
+        .contribution-content {
+            flex-direction: column;
+        }
+        .document-subject.contribution {
+            width: 100%;
+            margin-bottom: 2em;
+        }
+        .contribution-area {
+            width: 100%;
+            height: 12em;
+        }
+    }
+    
     @media (max-width:768px) {
+        section.contribution {
+            background: url('../images/background4.jpg') right no-repeat;
+            background-size: cover;
+        }
         .document-subject {
-            margin: 3em 0 2em 2rem;
+            margin: 2em 0 2em 0;
+        }
+        .contribution-content {
+            padding: 0 1rem;
+            flex-direction: column;
+        }
+        .document-subject.contribution {
+            width: 100%;
         }
         .contribution-title {
             font-size: 1.8em;
         }
         .contribution-area {
-            margin-left: 2rem;
-            width: 47.5em;
+            width: 100%;
             height: 14em;
             padding-right: 4em;
+            margin-bottom: 2em;
         }
         .contribution-text {
             color: #fff;
