--- a/PROJECTS/DOCUMENTATION PAGE/css/documents.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/documents.css
@@ -19,12 +19,14 @@ section.courses {
 
 .feature-bar {
     height: 4em;
+    padding-left: 8rem;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: #000;
-    border-bottom: .15rem solid rgb(191, 36, 252);
+    background: rgb(26, 26, 26);
+    box-shadow: 0 .2em .1em .2em rgb(191, 36, 252);
+    transition: all 0.1s ease-in;
 }
 
 .open-feature-btn {
@@ -84,8 +86,8 @@ section.courses {
 }
 
 .navigation-bar {
-    width: 21%;
-    transform: translateX(-90%);
+    width: 22em;
+    transform: translateX(-18em);
     transition: all .2s ease-in;
 }
 
@@ -95,9 +97,10 @@ section.courses {
 
 .document-title {
     display: inline-block;
-    background: #000;
+    background: rgb(26, 26, 26);
     color: #fff;
     font-size: 2em;
+    text-transform: uppercase;
     padding: 1rem 2rem;
     padding-right: 5em;
     clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 51%, 0% 0%);
@@ -118,7 +121,7 @@ section.courses {
 
 .documents-menu {
     width: 20%;
-    height: 73vh;
+    height: calc(73vh + 2rem);
     overflow-y: auto;
     transition: all 0.1s ease-in;
 }
@@ -130,7 +133,7 @@ section.courses {
     color: #fff;
     width: 100%;
     height: 4em;
-    background: #000;
+    background: rgb(26, 26, 26);
     text-transform: uppercase;
     font-size: 1.2em;
     padding: 0 1rem;
@@ -144,7 +147,8 @@ section.courses {
 }
 
 .documents-list {
-    padding: 2rem;
+    margin-top: 1rem;
+    padding-left: 2rem;
     width: 78%;
     height: 73vh;
     overflow-y: auto;
@@ -155,8 +159,8 @@ section.courses {
         font-size: 1.1vw;
     }
     .navigation-bar {
-        width: 23%;
-        transform: translateX(-85%);
+        width: 22em;
+        transform: translateX(-73%);
     }
 }
 
@@ -165,10 +169,17 @@ section.courses {
         font-size: 1.2vw;
     }
     .navigation-bar {
-        width: 25%;
-        transform: translateX(-75%);
+        width: 22em;
+        transform: translateX(-67%);
     }
     .documents-link {
         height: 5em;
+    }
+}
+
+@media (max-width:768px) {
+    .documents-list {
+        margin: 0;
+        padding: 2rem;
     }
 }
