--- a/PROJECTS/DOCUMENTATION PAGE/css/global.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/global.css
@@ -8,6 +8,10 @@
     scroll-behavior: smooth;
 }
 
+body {
+    background: rgb(28, 11, 28);
+}
+
 .dark-mode {
     -webkit-filter: invert(1) hue-rotate(180deg);
     filter: invert(1) hue-rotate(180deg);
@@ -31,14 +35,57 @@
 }
 
 ::-webkit-scrollbar {
-    width: .5rem;
-    background: #000;
+    width: 1rem;
+    background: rgb(26, 26, 26);
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(26, 26, 26);
 }
 
 ::-webkit-scrollbar-thumb {
     background: rgb(191, 36, 252);
+    border-radius: 1rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
     background: rgb(175, 21, 236);
+}
+
+#loading {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-color: rgb(0, 0, 0);
+    z-index: 1000;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loading-image {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+}
+
+.page-loading *,
+.page-loading *:before,
+.page-loading *:after {
+    animation-play-state: paused !important;
+}
+
+.fade-out {
+    animation: fade-out 1s ease-out forwards;
+}
+
+@keyframes fade-out {
+    100% {
+        opacity: 0;
+        z-index: -100;
+    }
 }
