--- a/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
@@ -26,6 +26,7 @@
     
     .document-subject.contribution {
         width: 60%;
+        padding: 0;
     }
     
     .contribution-area {
@@ -122,8 +123,8 @@
             background: url('../images/background4.jpg') right no-repeat;
             background-size: cover;
         }
-        .document-subject {
-            margin: 2em 0 2em 0;
+        .document-subject.contribution {
+            margin: 2em 0rem 2em 2rem;
         }
         .contribution-content {
             padding: 0 1rem;
@@ -139,6 +140,7 @@
             width: 100%;
             height: 14em;
             padding-right: 4em;
+            margin-left: 2rem;
             margin-bottom: 2em;
         }
         .contribution-text {
