--- a/PROJECTS/DOCUMENTATION PAGE/css/courses.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/courses.css
@@ -3,6 +3,7 @@
 @import url('./footer.css');
 section {
     background: rgb(26, 26, 26);
+    transition: all 0.1s ease-in;
 }
 
 section .container {
