--- a/PROJECTS/DOCUMENTATION PAGE/css/global.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/global.css
@@ -54,8 +54,8 @@ section.light-mode {
 }
 
 .documents-list.light-mode .list-courses-link {
-    color: rgb(26, 26, 26);
-    font-weight: 500;
+    color: #000;
+    font-weight: 600;
     transition: none;
 }
 
