--- a/PROJECTS/DOCUMENTATION PAGE/css/responsive.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/responsive.css
@@ -28,13 +28,17 @@
         width: calc(100% - 2rem);
     }
     .feature-bar {
-        padding-left: 0;
-        padding-top: 1em;
+        padding: 2em 2rem 3em 2rem;
         flex-direction: column;
-        height: 9em;
+        justify-content: space-around;
+        height: 14em;
         align-items: center;
         border-bottom: .5em solid rgb(191, 36, 252);
         box-shadow: none;
+    }
+    .main-feature {
+        flex-direction: column;
+        align-items: center;
     }
     .open-feature-btn {
         display: none;
@@ -44,8 +48,11 @@
         width: 50%;
     }
     .navigation-bar {
-        width: 40%;
+        width: 20.5em;
         transform: none;
+    }
+    .search-bar {
+        width: 100%;
     }
     .documents-content {
         flex-direction: column;
