--- a/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
@@ -1,8 +1,3 @@
-    section.contribution {
-        background: url('../images/background4.jpg') center no-repeat;
-        background-size: cover;
-    }
-    
     .container.contribution {
         overflow-x: hidden;
     }
@@ -27,6 +22,12 @@
     .document-subject.contribution {
         width: 60%;
         padding: 0;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+    
+    .document-subject.contribution .list-courses-item {
+        height: 3em;
     }
     
     .contribution-area {
@@ -101,10 +102,6 @@
     }
     
     @media (max-width:992px) {
-        section.contribution {
-            background: url('../images/background4.jpg') right no-repeat;
-            background-size: cover;
-        }
         .contribution-content {
             flex-direction: column;
         }
@@ -119,12 +116,8 @@
     }
     
     @media (max-width:768px) {
-        section.contribution {
-            background: url('../images/background4.jpg') right no-repeat;
-            background-size: cover;
-        }
         .document-subject.contribution {
-            margin: 2em 0rem 2em 2rem;
+            margin: 0 0rem 2em 2rem;
         }
         .contribution-content {
             padding: 0 1rem;
