--- a/PROJECTS/DOCUMENTATION PAGE/css/documents.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/documents.css
@@ -31,6 +31,11 @@ section.courses::before {
     background-size: cover;
 }
 
+section.contribution::before {
+    background: url('../images/background4.jpg') center no-repeat;
+    background-size: cover;
+}
+
 .feature-bar {
     height: 4em;
     padding: 0 8rem;
@@ -40,7 +45,7 @@ section.courses::before {
     align-items: center;
     justify-content: space-between;
     background: rgb(26, 26, 26);
-    box-shadow: 0 .1em .5em .025em rgb(191, 36, 252);
+    box-shadow: 0 .1em .5em .025em rgb(46, 46, 46);
     transition: all 0.1s ease-in;
 }
 
@@ -177,6 +182,8 @@ section.courses::before {
     height: calc(73vh + 2rem);
     overflow-y: auto;
     transition: all 0.1s ease-in;
+    box-shadow: .2em .3em .5em .025em rgb(46, 46, 46);
+    border-bottom-right-radius: .5em;
 }
 
 .documents-link {
@@ -237,7 +244,10 @@ section.courses::before {
 
 @media (max-width:768px) {
     .documents-list {
-        margin-top: 1rem;
+        margin-top: 2.5rem;
         padding-left: 0;
+    }
+     ::-webkit-scrollbar-button {
+        border-radius: 1em;
     }
 }
