--- a/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/contribution.css
@@ -31,8 +31,8 @@
     }
     
     .contribution-area {
-        width: 40%;
-        height: 20em;
+        width: 45%;
+        height: 26em;
         border-left: .5rem solid rgb(191, 36, 252);
         padding: 0rem 2rem;
         padding-right: 5em;
@@ -56,6 +56,10 @@
         color: blue;
     }
     
+    .gg-form-link {
+        color: red;
+    }
+    
     .contribution-link {
         font-size: 1.5rem;
         text-decoration: none;
@@ -67,7 +71,7 @@
     }
     
     .btn-group {
-        width: 18em;
+        width: 100%;
         height: 3em;
         display: flex;
         flex-direction: row;
@@ -77,7 +81,7 @@
     .contribution-btn {
         text-decoration: none;
         border-radius: .5em;
-        width: 45%;
+        width: 30%;
         height: 100%;
         display: flex;
         justify-content: center;
@@ -98,6 +102,11 @@
     
     .contribution-btn:nth-child(2) {
         background: blue;
+        color: #fff;
+    }
+    
+    .contribution-btn:nth-child(3) {
+        background: red;
         color: #fff;
     }
     
