--- a/PROJECTS/DOCUMENTATION PAGE/css/documents.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/documents.css
@@ -136,8 +136,8 @@ section.contribution::before {
 }
 
 .navigation-bar {
-    width: 20em;
-    transform: translateX(-16em);
+    width: 22em;
+    transform: translateX(-15em);
     transition: all .2s ease-in;
     display: flex;
     flex-direction: row;
@@ -166,6 +166,7 @@ section.contribution::before {
 }
 
 .list-courses-link {
+    text-transform: capitalize;
     font-size: 1.4em;
 }
 
