--- a/PROJECTS/DOCUMENTATION PAGE/css/global.css
+++ b/PROJECTS/DOCUMENTATION PAGE/css/global.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Roboto&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans&family=Poppins&display=swap');
 * {
     font-size: 1vw;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     scroll-behavior: smooth;
 }
 
